--- a/Credible Spider.vcxproj
+++ b/Credible Spider.vcxproj
@@ -39,10 +39,10 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <IncludePath>$(SolutionDir);$(SolutionDir)Animation;$(SolutionDir)Poker;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir);$(SolutionDir)Control;$(SolutionDir)Dialog;$(SolutionDir)Animation;$(SolutionDir)Poker;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <IncludePath>$(SolutionDir);$(SolutionDir)Animation;$(SolutionDir)Poker;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir);$(SolutionDir)Control;$(SolutionDir)Dialog;$(SolutionDir)Animation;$(SolutionDir)Poker;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -74,6 +74,11 @@
   <ItemGroup>
     <ClCompile Include="Animation\AbstractAnimation.cpp" />
     <ClCompile Include="CardDrawer.cpp" />
+    <ClCompile Include="Control\TButton.cpp" />
+    <ClCompile Include="Control\TCheckBox.cpp" />
+    <ClCompile Include="Control\TControl.cpp" />
+    <ClCompile Include="Control\tstring.cpp" />
+    <ClCompile Include="Dialog\DialogAuto.cpp" />
     <ClCompile Include="Poker\CardTurnOverAnimation.cpp" />
     <ClCompile Include="Dialog\DialogChooseLevel.cpp" />
     <ClCompile Include="Animation\ParallelAnimation.cpp" />
@@ -97,6 +102,11 @@
     <ClInclude Include="Animation\AbstractAnimation.h" />
     <ClInclude Include="Animation\ParallelAnimation.h" />
     <ClInclude Include="CardDrawer.h" />
+    <ClInclude Include="Control\TButton.h" />
+    <ClInclude Include="Control\TCheckBox.h" />
+    <ClInclude Include="Control\TControl.h" />
+    <ClInclude Include="Control\tstring.h" />
+    <ClInclude Include="Dialog\DialogAuto.h" />
     <ClInclude Include="Poker\CardTurnOverAnimation.h" />
     <ClInclude Include="Dialog\DialogChooseLevel.h" />
     <ClInclude Include="POINT.h" />
